# ArchLens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 31b77cc98f3c_add_repo_type_to_analysis.py  ff3b1ee28354_add_security_quality_summary_grade_to_.py  ffb8c3aa7d85_initial_schema.py
app/: __init__.py  config.py  dependencies.py  exceptions.py
app/middleware/: __init__.py  logging_middleware.py
app/models/: db_models.py
app/repositories/: __init__.py  db.py
app/routers/: web.py
app/schemas/: __init__.py  schemas.py
app/services/: analysis_service.py  github_service.py  metrics_service.py  repository_service.py
app/static/css/: history.css  home.css  results.css  styles.css
app/templates/: 404.html  base.html  history.html  home.html  results.html
scripts/: seed.py  self_analyze.py  self_analyze_personal.py
tests/integration/: conftest.py  test_web_routes.py
tests/unit/: test_github_service.py  test_metrics_service.py
