[project]
name = "archlens"
version = "0.1.0"
description = "Repository Intelligence Platform — automated engineering health scoring for GitHub repositories."
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Vishnu" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "sqlalchemy>=2.0.31",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "alembic>=1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.9",
    "black>=24.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]
